# docmed-uz-django

./: LICENSE  README.md  db.sqlite3  fixtures.json  pyproject.toml  readme.md
courses/: admin.py  api.py  models.py  serializers.py  urls.py  views.py
courses/templates/courses/: certificate_detail.html  course_detail.html  course_list.html  drug_detail.html  speaker_detail.html  tag_detail.html  tag_list.html
docmed/: settings.py  urls.py  utils.py  views.py
modules/: admin.py  api.py  models.py  serializers.py  urls.py  views.py
modules/templates/modules/: certificate_detail.html  module_detail.html  module_list.html
static/: base.css  playerjs.js
templates/: base.html  certificate.html  index.html  notimplemented.html  title_img_list.html
user/: models.py
user/migrations/: 0001_initial.py
